Add Icon to Main

--- a/frontend/src/components/MediaList/MediaList.module.less
+++ b/frontend/src/components/MediaList/MediaList.module.less
@@ -1,5 +1,24 @@
 .mediaList {
-  height: 600px;            /* 고정 높이 */
-  overflow-x: auto;         /* 가로 스크롤 자동 표시 */
-  white-space: nowrap;      /* 항목이 한 줄로 출력되도록 설정 */
+  height: 600px;           
+  overflow-x: auto;        
+  white-space: nowrap;      
+}
+
+.ratingContainer {
+  gap: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+  gap: 8px; 
+}
+
+.ratingIcon {
+  width: 1rem;
+  height: 1rem;
+  object-fit: contain; 
+  background-color: black;
 }
