--- a/frontend/src/components/ResourceViewer/ResourceViewer.module.less
+++ b/frontend/src/components/ResourceViewer/ResourceViewer.module.less
@@ -36,21 +36,25 @@
 .resourceViewerChart {
   background-color: var(--background-light);
   flex: 1 1 calc(33.33% - var(--gap-size));
-  height: 100%;
+  height: 33%;
+  width: 100%;
   border-radius: var(--border-radius);
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: var(--box-shadow);
+  margin-top: 30px;
 }
 
 .resourceViewerLineChart {
   background-color: var(--background-light);
   flex: 1 1 calc(50% - var(--gap-size));
-  height: calc(100% - 16px); /* 특정 높이 조정 */
+  height: calc(100% - 16px);
+  /* 특정 높이 조정 */
   border-radius: var(--border-radius);
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: var(--box-shadow);
+  margin-top: 30px;
 }
